# toro-indexer-for-serial-crystallography

./: .gitattributes  .gitignore  Dockerfile  README.md  debug_indexer.py  environment.yml  pyproject.toml  requirements.txt  setup.py  solution_indices.npy  solution_matrices.npy  speed_statistics.txt  stream_file_indexer.py
.renku/: template_checksums.json
.renku/metadata/: activity-catalog  datasets  datasets-provenance-tails  project
data/lyso_12p4kev_1khz_150mm_run000026/: Lyso_12p4keV_1kHz_150mm_run000026_data_000001.th6.snr4.0.mpixco1.stream
models/: indexer_model.py
notebooks/: Testing model.ipynb  results_visualization.ipynb
test_cases/: test_outputs.py
toro/models/: indexer_model.py
toro/scripts/: stream_file_indexer.py
toro/utils/: functions_SX.py
toro/utils/datasets/: RawStreamData.py
utils/: functions_SX.py
utils/datasets/: RawStreamData.py
